--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.3.5'
 	id 'io.spring.dependency-management' version '1.1.6'
+
+	id 'maven-publish'
 }
 
 group = 'io.basicspring'
@@ -15,6 +17,7 @@ java {
 
 repositories {
 	mavenCentral()
+	mavenLocal()
 	maven {
 		url "https://github.com/debenick17/basic-vertx-app"
 		credentials {
