Consume published package - 01

--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ repositories {
 	mavenCentral()
 	mavenLocal()
 	maven {
-		url "https://github.com/debenick17/basic-vertx-app"
+		url "https://maven.pkg.github.com/debenick17/basic-vertx-app"
 		credentials {
 			// username = System.getenv("GITHUB_ACTOR")
 			username = "debenick17"
@@ -45,7 +45,6 @@ dependencies {
 
 	// GitHub Package Dependency
 	implementation 'io.app:basic-vertx-app:1.0.3'
-
 
 	runtimeOnly 'io.micrometer:micrometer-registry-otlp'
 	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
