--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ repositories {
 		credentials {
 			// username = System.getenv("GITHUB_ACTOR")
 			username = "debenick17"
-			password = System.getenv("GITHUB_TOKEN")
+			password = System.getenv("TOKEN")
 		}
 	}
 	gradlePluginPortal()
